[package]
edition = "2018"
name = "combostew"
version = "0.1.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Combostew is an intermediate layer between the image crate and the 'sic' and 'stew' image tool front-ends."
license = "MIT"
repository = "https://github.com/foresterre/stew"
readme = "README.md"
exclude = [
    ".idea/*",
    ".vscode/*",
    "*.iml",
]
keywords = ["image", "converter", "cli", "front-end", "image-cli"]
categories = ["multimedia::images", "command-line-utilities"]

[features]
output-test-images = []

[dependencies]
clap = "2.32.0"
image = "0.21.0"

[lib]
name = "combostew"
path = "src/lib.rs"

[profile.release]
panic = "abort"